# neon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  ROADMAP.md  SECURITY.md  check-widevine-update.sh  community-outreach.md  deny.toml  download-widevine.sh  fix-drm.sh  install.sh  uninstall.sh
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  release.yml
Formula/: neon.rb
app/: build.sh  main.swift
docs/superpowers/plans/: 2026-05-04-neon-v3-orchestration-plan.md
docs/superpowers/specs/: 2026-05-04-neon-rust-rewrite-design.md
docs/superpowers/teams/cli/: handoff.md
docs/superpowers/teams/core-engine/: handoff.md
docs/superpowers/teams/orchestrator/: status.md
docs/superpowers/teams/platform/: handoff.md
docs/v3/: license-faq.md
linux-app/: browser.go  build.sh  com.neon.fix-drm.policy  go.mod  main.go  neon.desktop  watcher.go
packaging/aur/: PKGBUILD
packaging/deb/: build-deb.sh
packaging/deb/debian/: control  postinst  prerm
scripts/: v3-bridge-setup.sh
src/: config.rs  error.rs  hooks.rs  lib.rs  lockfile.rs  log.rs  main.rs  migration.rs  notify.rs
src/bridge/: health.rs  looking_glass.rs  mod.rs
src/browsers/: discovery.rs  known.rs  mod.rs
src/cli/: doctor.rs  init.rs  launch.rs  list_browsers.rs  patch.rs  setup.rs  status.rs  test.rs  update.rs
src/cli/stream/: init.rs  mod.rs  start.rs  status.rs
src/daemon/: mod.rs  tray.rs
src/daemon/lifecycle/: linux.rs  macos.rs  mod.rs
src/daemon/power/: linux.rs  macos.rs  mod.rs
src/patch/: backup.rs  linux.rs  macos.rs  mod.rs
src/platform/: linux.rs  mod.rs
src/widevine/: cache.rs  extract.rs  manifest.rs  mod.rs  provider.rs
tests/: browsers_integration.rs  cli_surface.rs  feature_flag.rs
