[package]
name = "neon"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Nicholas Raimbault <nraimbault16@gmail.com>"]
license = "MIT"
description = "Single-binary cross-platform DRM (Widevine) helper for Chromium-family browsers"
repository = "https://github.com/nicholasraimbault/neon"
homepage = "https://github.com/nicholasraimbault/neon"
readme = "README.md"
keywords = ["drm", "widevine", "chromium", "helium", "thorium"]
categories = ["command-line-utilities"]

[lib]
name = "neon"
path = "src/lib.rs"

[[bin]]
name = "neon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
# Error handling — categorized errors per spec.
thiserror = "2"
# Serde + formats for manifest, config, and state files.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# HTTPS for manifest fetch — rustls only (cargo-deny bans openssl).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
# URL type used in the public `fetch_manifest` API.
url = "2"
# XDG / platform-conventional paths.
dirs = "5"
# `flock`-based exclusive lockfile.
fs2 = "0.4"
# SHA-512 verification for the Widevine CRX3 download (Phase 2).
sha2 = "0.10"
# CRX3 ZIP body extraction. Default features pull lots of compression
# methods we don't need; only deflate is required for Mozilla's CRX3.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Process scanning for browser-running detection (Phase 2).
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
# Direct FFI for `renameat2(RENAME_EXCHANGE)` (Linux) and
# `renameatx_np(RENAME_SWAP)` (macOS): used by `crate::platform` for the
# atomic-rename helper. nix's renameat2 wrapper is gated on
# `target_env = "gnu"` (excludes musl), and nix has no macOS swap wrapper,
# so the platform module calls libc directly.
libc = "0.2"
# Structured logging used by daemon lifecycle / power modules. Other teams
# (cli, daemon) will plug in `tracing-subscriber` for the runtime; the
# library-level `tracing::info!`/`warn!` calls are no-ops without a
# subscriber installed.
tracing = "0.1"

# macOS-specific deps: ObjC FFI for NSWorkspace wake notifications.
# `block2` is required because NSNotificationCenter takes a block-typed
# handler argument; objc2-app-kit doesn't enable the dep transitively
# under default features.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = "0.2"
block2 = "0.5"

# Linux-specific deps: zbus for systemd-logind PrepareForSleep signal.
# Default features include async runtime integration we don't need; we use
# only the blocking API on a dedicated background thread.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4" }

[dev-dependencies]
# Sandboxed temporary directories for filesystem-shaped tests.
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Which actions to run on pull requests
pr-run-mode = "plan"
# NOTE: zipsign signing is not natively supported by cargo-dist 0.31. The
# `self_update` crate's `signatures` feature can verify zipsign-signed
# artifacts at update time; producing those signatures requires a separate
# post-build signing step. This is deferred to Phase 5 alongside the
# self-update implementation. See infra handoff doc.
